package tpo.maxim.part3

/**
 * Раса
 */
enum class Species {

    MARSIAN,
    HUMAN
}